modify from `orders service` repo for `carts service`
+ remove some unnecessary files

--- a/.env.sample
+++ b/.env.sample
@@ -3,5 +3,7 @@ S3_BUCKET_NAME=
 S3_REGION=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+FULL_IMPORT_PATH=/go/src/github.com/o0khoiclub0o/piflab-store-api-go
 GO15VENDOREXPERIMENT=1
 PORT=
+DB_MACHINE_NAME=
