--- a/circle.yml
+++ b/circle.yml
@@ -20,10 +20,10 @@ dependencies:
 test:
   pre:
     - go get bitbucket.org/zealotnt/goose/cmd/goose
+    - go get github.com/onsi/ginkgo/ginkgo
     - go install github.com/onsi/ginkgo/ginkgo
     - go get golang.org/x/tools/cmd/cover
     - go get github.com/mattn/goveralls
   override:
     - cd $FULL_IMPORT_PATH && goose up
-    - cd $FULL_IMPORT_PATH && ginkgo -r -cover
     - cd $FULL_IMPORT_PATH && ./testcoverage.sh
